examples/good/13-FunctionShadowing.tms
void main() {

  int x = 1;

  {
    void main(int x) {
        printInt(x);
        printBool(x == 2);
        return;
    }
    main(2);
  }
  
  return;
}