examples/bad/09-ArgumentShadowing.tms
void f(int x) {
  int x = 5;
  return;
}

void main() {
  return;
}